Sync default theme with latest from pico. Fix nav header actions on mobile viewports

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -66,6 +66,14 @@ body {
         }
     }
 
+    .sm-hidden {
+        display: none;
+
+        @media (min-width: map-get($breakpoints, "sm")) {
+            display: inherit;
+        }
+    }
+
     footer {
         .footnote {
             text-align: right;
